Profile: education and experience
